data/derived/sp14/progs/unify/prog3473.ml.out
Characters 29-34:
  let fixpoint (f,b) = wwhile ((f,b), b);;
                               ^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
